--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,16 @@ footer{
     gap: 0.8rem;
 }
 
+.redesSociales i{
+    color: white;
+    font-size: 1.25rem;
+    
+}
+
+.redesSociales i:hover{
+    color: var(--rojoBrillante);
+}
+
 .navBarFooter{
     display: flex;
     flex-direction: column;
@@ -277,6 +287,7 @@ footer{
     height: 141.14px;
     padding-bottom: 1rem;
 }
+
 
 .navBarFooter li{
     line-height: 2;
@@ -289,6 +300,11 @@ footer{
     font-weight: 400;
     line-height: 1.5rem;
 }
+
+.navBarFooter li a:hover{
+    color: var(--rojoBrillante);
+}
+
 
 .formulario{
     display: flex;
