--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
     --varianteGrisClaro: rgb(249, 249, 249);
     --gris: rgba(140, 140, 148, 1);
     --negro: rgba(0, 0, 0, 1);
+    --sombra: rgba(0, 0, 0, 0.25);
+    --crema: #e5e4da;
+    --LaDelDiego: #FAFAFA;
 
 }
 
@@ -82,7 +85,7 @@ nav a:hover{
     border-radius: 3.125rem;
     color: var(--varianteGrisClaro);
     border: none;
-    box-shadow: 0px 4px 7px;
+    box-shadow: 0px 4px 7px var(--sombra);
 }
 
 .botonBlanco{
@@ -133,7 +136,7 @@ nav a:hover{
     line-height: 157.1%;
     width: 23.125rem;
     text-align: justify;
-    color: var(--negro);
+    color: var(--azulGrisáceoOscuro);
 }
 
 .numeradores{
@@ -149,6 +152,7 @@ nav a:hover{
 .parrafonumerador{
     padding-left: 6em;
     color: var(--azulGrisáceoOscuro);
+    line-height: 1.75rem;
 }
 
 .segundaSeccion{
@@ -173,7 +177,7 @@ nav a:hover{
 
 .segundaSeccion .articuloPrincipal p{
     margin-right: 6em;
-    color: var(--negro);
+    color: var(--azulGrisáceoOscuro)
 }
 
 .terceraSeccion{
@@ -185,8 +189,8 @@ nav a:hover{
     font-weight: 700;
     line-height: 61px;
     letter-spacing: -0.01em;
-    text-align: left;
-
+    text-align: center;
+    margin-bottom: 7rem;
 }
 .terceraSeccion div{
     display: flex;
@@ -199,16 +203,12 @@ nav a:hover{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #FAFAFA;
+    background-color: var(--LaDelDiego);
 }
 
 .cards img{
     width: 70px;
     height: 70px;
-}
-
-.terceraSeccion h2{
-    text-align: center;
 }
 
 .cards p{
@@ -328,6 +328,26 @@ footer{
     gap: 4rem;
     padding-left: 13rem;
 }
+
+form input{
+    background-color: var(--LaDelDiego);
+    height: 2.5rem;
+    border-radius: 1.875rem;
+    border: none;
+    padding: 1rem;
+    text-align: left;
+    width: 65vw;
+}
+
+form button{
+    background-color: var(--rojoBrillante);
+    width: 4rem;
+    height: 2.5rem;
+    border-radius: 1.125rem;
+    color: var(--varianteGrisClaro);
+    border: none;
+
+}
 .copyright{
     font-size: 13px;
     font-weight: 500;
@@ -372,8 +392,9 @@ footer{
     h1{
         margin: 0em;
         padding: 0rem 1rem 0rem 1rem;
-        font-size: 3rem;
+        font-size: 2.3rem;
         font-weight: 500;
+        line-height: 3rem;
     }
     
     .primerSeccion{
@@ -400,7 +421,7 @@ footer{
     }    
     
     .primerSeccion p {
-        margin: 1rem 0rem 1.25rem 0rem;
+        margin: 1rem 0rem 2rem 0rem;
         line-height: 157.1%;
         width: 23.125rem;
         text-align: center;
@@ -409,11 +430,19 @@ footer{
     
     .numeradores{
         align-items: center;
-        gap: 0rem;
-        padding: 3rem 2rem 0rem 2rem;
+    
+        gap: 0.5rem;
+        margin: 3rem 0rem 0rem 1rem;
         width: auto;
+        background-color: var(--crema);
+        border-radius: 1rem;
     }
     
+    h3{
+        font-size: 1rem;
+        
+    }
+
     .lista{
         max-width: 100vw;
         margin-left: 0rem;
@@ -450,7 +479,7 @@ footer{
 
     .articuloPrincipal h2{
         /* margin: 0px; */
-        font-size: 2rem;
+        font-size: 1.75rem;
         font-weight: 600;
         text-align: center;
         width: auto;
@@ -473,12 +502,14 @@ footer{
     }
     
     .terceraSeccion h2{
-        font-size: 2rem;    
+        font-size: 1.7rem;  
+        font-weight: 500;
+        margin-bottom: 5rem;
     }
     .terceraSeccion div{
         flex-direction: column;
         flex-wrap: wrap;
-        gap: 2em;
+        gap: 4rem;
         padding: 0rem 3rem 0rem 3rem;
     }
     
@@ -487,15 +518,16 @@ footer{
         flex-direction: column;
         align-items: center;
         text-align: center;
-        background-color: #FAFAFA;
+        background-color: var(--LaDelDiego);
         position: relative;
+        border-top: solid 3rem var(--LaDelDiego);
     }
   
     .cards img{
         width: 70px;
         height: 70px;    
         position: absolute; 
-        top: -2.5rem;
+        top: -5rem;
     } 
     
 /* 
@@ -585,7 +617,8 @@ footer{
         display: flex;
         flex-direction: column;
         gap: 4rem;
-        padding-left: 5rem;
+        padding-left: 0rem;
+
     }
     .copyright{
         text-align: center;
